bindata/assets/kueue-operator/networkpolicy/operator/01-allow-egress-api.yaml
# allow outbound traffic to kube-apiserver from operator pod
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kueue-operator-allow-egress-kube-apiserver
  namespace: openshift-kueue-operator
  labels:
    app.kubernetes.io/managed-by: kueue-operator
    app.kubernetes.io/component: operator-network-policy
spec:
  podSelector:
    matchLabels:
      app.openshift.io/component: operator
      app.openshift.io/name: kueue
  egress:
  - ports:
    - protocol: TCP
      port: 6443  # we can not use a name because it is not on the pod network
  policyTypes:
  - Egress
