bindata/assets/kueue-operator/networkpolicy/operator/02-allow-egress-cluster-dns.yaml
# allow traffic to cluster DNS service from operator pod
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kueue-operator-allow-egress-cluster-dns
  namespace: openshift-kueue-operator
  labels:
    app.kubernetes.io/managed-by: kueue-operator
    app.kubernetes.io/component: operator-network-policy
spec:
  podSelector:
    matchLabels:
      app.openshift.io/component: operator
      app.openshift.io/name: kueue
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-dns
      podSelector:
        matchLabels:
          dns.operator.openshift.io/daemonset-dns: default
    ports:
    - protocol: TCP
      port: dns-tcp
    - protocol: UDP
      port: dns
  policyTypes:
  - Egress
